--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -5,3 +5,51 @@
 body {
 	color: #090918;
 }
+
+:root {
+	/* Text Colors */
+	--black-text: #090918;
+	--secondary-text: #7b7f8a;
+
+	/* Primary Colors */
+	--primary-900: #102a43;
+	--primary-800: #243b53;
+	--primary-700: #334e68;
+	--primary-600: #486581;
+	--primary-500: #627d98;
+	--primary-400: #829ab1;
+	--primary-300: #9fb3c8;
+	--primary-200: #bcccdc;
+	--primary-100: #d9e2ec;
+	--primary-50: #f0f4f8;
+
+	/* Secondary Colors */
+	--secondary-900: #704911;
+	--secondary-800: #925f13;
+	--secondary-700: #b77c19;
+	--secondary-600: #d89e27;
+	--secondary-500: #e1c076;
+	--secondary-400: #e7cd91;
+	--secondary-300: #edd9ad;
+	--secondary-200: #f3e6c8;
+	--secondary-100: #f9f2e4;
+	--secondary-50: #fff9eb;
+
+	/* Button Colors */
+	--blue-button: #2c87f2;
+	--red-button: #f24c4c;
+	--yellow-button: #e1c63d;
+	--green-button: #28a745;
+	--gray-button: #cccccc;
+	--black-button: #3a3a3a;
+
+	/* Other Colors */
+	--yellow-star: #ffc400;
+
+	/* Font Sizes */
+	--fontSize-xs: 0.75rem; /* 12px */
+	--fontSize-sm: 0.875rem; /* 14px */
+	--fontSize-base: 1rem; /* 16px */
+	--fontSize-lg: 1.5rem; /* 24px */
+	--fontSize-xl: 2rem; /* 32px */
+}
