Refactor: menyelesaikan lookup dan merapihkan struktur folder

--- a/src/assets/styles/components/FsInputFields.module.css
+++ b/src/assets/styles/components/FsInputFields.module.css
@@ -96,3 +96,11 @@
 	padding-left: 38px;
 }
 /* #endregion textarea input - field style */
+
+/* #region text input - field style */
+.lookup-input-field {
+	width: 100%;
+	padding-left: 38px;
+	cursor: pointer;
+}
+/* #endregion text input - field style */
